# image-freetype-node

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  jest.config.js  jest.config.json  package.json  pnpm-lock.yaml
.github/actions/prebuild-node-addon-action/: action.yml
.github/actions/publish-to-npm-registry/: action.yml
.github/workflows/: workflow.yml
js/src/: index.d.ts  index.js
js/test/: overlayWatermarkMask.test.js
native/image-watermark/: CMakeLists.txt
native/image-watermark/include/: watermark.h
native/image-watermark/src/: CMakeLists.txt  main.cpp
native/image-watermark/test/: CMakeLists.txt  main.cpp
native/node-watermark-loader/: CMakeLists.txt  main.cpp
patch/: opencv_no_so_version.patch
script/: build.ps1  build.sh  buildNodeNative.js  generate_find_package_args.cmake
